added a structure to the json response for dashboard request
